<resources>
    <string name="app_name">Password Manager</string>
    <string name="password_service_hint">Enter a name for the service.</string>
    <string name="password_service_label">Service</string>
    <string name="password_username_hint">Enter your username.</string>
    <string name="password_username_label">Username</string>
    <string name="password_password_hint">Enter your password or generate one.</string>
    <string name="password_password_label">Password</string>
    <string name="password_description_hint">Enter a brief description.</string>
    <string name="password_description_label">Description</string>
    <string name="new_service">Add Service</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d services</string>
    <string name="delete_service">Delete Service</string>
    <string name="empty_view_title">Uh oh!</string>
    <string name="empty_view_message">There seems to be nothing here. To get started, tap anywhere to add a new service.</string>
    <string name="help_developer_label">Developer:</string>
    <string name="help_website_label">Website:</string>
    <string name="help_github_label">Github:</string>
    <string name="help_project_label">Project:</string>
    <string name="help_description_label">Descrition:</string>
    <string name="project_developer">Shivam Amin</string>
    <string name="developer_website">https://www.ShivamAmin.com</string>
    <string name="project_github">https://www.github.com/ShivamAmin</string>
    <string name="project_website">https://www.github.com/ShivamAmin/ProjectManager</string>
    <string name="project_description">Password Manager is an application that allows its users to store and manage passwords locally. Using SQLite technology, and sophisticated encryption methods, we ensure a safe password for every service. Please continue to follow the development of this application as I continue to update it.</string>
    <string name="authentication_title">Authentication</string>
    <string name="authentication_password">Password: </string>
    <string name="authentication_placeholder">Please enter your password...</string>
    <string name="authentication_button">Authenticate</string>
</resources>
